# epp-yolo-compliance

./: .gitignore  01 pregunta estructurada en JSON.txt  02 stack_tecnologico_epp_yolo.txt  03 Plan para ejecutar JSON.txt  README.md  pyproject.toml  requirements.txt
configs/: class_mapping.yaml  data.yaml  hyp_baseline.yaml  hyp_exp_A.yaml  hyp_exp_B.yaml  hyp_exp_C.yaml  hyp_exp_D.yaml
data/: README.md
notebooks/kaggle/: 01_baseline_train.ipynb  02_exp_A_resolution.ipynb  03_exp_B_augmentation.ipynb  04_exp_C_class_weights.ipynb  05_exp_D_close_mosaic.ipynb  06_inference_demo.ipynb  _generate_notebooks.py
reports/: README.md
src/: __init__.py
src/compliance/: __init__.py  geometry.py  renderer.py  verifier.py
src/data/: __init__.py  class_distribution_report.py  make_splits.py  remap_labels.py  validate_visually.py
tests/: test_geometry.py  test_verifier.py
